fixed name on safari spacing

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -137,7 +137,7 @@ figcaption {
 	font-size: .85em;
 	opacity: .25;
 	font-weight: 500;
-	position: absolute;
+	position: fixed;
 	right: 1em;
 	bottom: .5em;
 	color: rgba(255, 255, 255, .25);
